--- a/employee.ui
+++ b/employee.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>971</width>
+    <width>968</width>
     <height>560</height>
    </rect>
   </property>
@@ -830,6 +830,11 @@
       <string>Gender</string>
      </property>
     </column>
+    <column>
+     <property name="text">
+      <string>Options</string>
+     </property>
+    </column>
     <item row="19" column="0">
      <property name="text">
       <string/>
@@ -1304,7 +1309,7 @@
    <widget class="QPushButton" name="add_btn_3">
     <property name="geometry">
      <rect>
-      <x>800</x>
+      <x>790</x>
       <y>20</y>
       <width>161</width>
       <height>71</height>
