--- a/form2.ui
+++ b/form2.ui
@@ -330,7 +330,7 @@ padding-bottom:7px;</string>
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>80</y>
+      <y>90</y>
       <width>180</width>
       <height>40</height>
      </rect>
@@ -346,32 +346,7 @@ padding-bottom:7px;</string>
      <string notr="true">color:rgba(255, 255, 255, 200);</string>
     </property>
     <property name="text">
-     <string>SihinaCODE</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_8">
-    <property name="geometry">
-     <rect>
-      <x>50</x>
-      <y>145</y>
-      <width>220</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">color:rgba(255, 255, 255, 170);</string>
-    </property>
-    <property name="text">
-     <string>Hi,
-Welcome to my youtube channel.
-Don't forget to subscribe.</string>
+     <string>Tv Empire</string>
     </property>
    </widget>
   </widget>
